# BufferLib

./: .gitignore  Buffer.cpp  Buffer.h  CMakeLists.txt  CompareResult.cpp  CompareResult.h  Config.cmake.in  Errors.h  Printable.h  README.md  Random32.cpp  Random32.h  TypeDefs.h  Utils.cpp  Utils.h  build.sh  test_boost.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  coverage.yml  performance.yml
examples/: CMakeLists.txt  basic_example.cpp  buffer_operations.cpp
scripts/: coverage-simple.sh  coverage.sh  run-benchmarks.sh
tests/: CMakeLists.txt  performance_tests.cpp  simple_test.cpp  unit_tests.cpp
